other/restrict-wildcard-verbs/.kyverno-test/resource.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: empty-rules
rules:
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: empty-rules
  namespace: test
rules:
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: omitted-rules
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: omitted-rules
  namespace: test
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: wildcard-once
rules:
- apiGroups: [""]
  resources: ["secrets"]
  verbs: ["*"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: wildcard-once
  namespace: test
rules:
- apiGroups: [""]
  resources: ["secrets"]
  verbs: ["*"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: wildcard-with-another-verb
rules:
- apiGroups: ["my-arbitrary-group"]
  resources: ["my-resource"]
  verbs: ["GET", "*"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: wildcard-with-another-verb
  namespace: test
rules:
- apiGroups: ["my-arbitrary-group"]
  resources: ["my-resource"]
  verbs: ["GET", "*"]
