other/restrict-wildcard-verbs/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-verbs
policies:
  -  ../restrict-wildcard-verbs.yaml
resources:
  - resource.yaml
results:
  - policy: restrict-wildcard-verbs
    rule: wildcard-verbs
    resources:
    - empty-rules
    kind: ClusterRole
    result: pass
  - policy: restrict-wildcard-verbs
    rule: wildcard-verbs
    resources:
    - empty-rules
    kind: Role
    result: pass
  - policy: restrict-wildcard-verbs
    rule: wildcard-verbs
    resources:
    - omitted-rules
    kind: ClusterRole
    result: pass
  - policy: restrict-wildcard-verbs
    rule: wildcard-verbs
    resources:
    - omitted-rules
    kind: Role
    result: pass
  - policy: restrict-wildcard-verbs
    rule: wildcard-verbs
    resources:
    - wildcard-once
    kind: ClusterRole
    result: fail
  - policy: restrict-wildcard-verbs
    rule: wildcard-verbs
    resources:
    - wildcard-once
    kind: Role
    result: fail
  - policy: restrict-wildcard-verbs
    rule: wildcard-verbs
    resources:
    - wildcard-with-another-verb
    kind: ClusterRole
    result: fail
  - policy: restrict-wildcard-verbs
    rule: wildcard-verbs
    resources:
    - wildcard-with-another-verb
    kind: Role
    result: fail
